# ST3215_Servo_Controller

./: .gitignore  README.md  gen_icon.py  index.html  package.json  vite.config.js
.github/workflows/: build.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  servo_protocol.rs
