[package]
name = "st3215-servo-controller"
version = "1.0.0"
description = "ST3215 Servo Controller"
authors = ["you"]
edition = "2021"

[lib]
name = "st3215_servo_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "st3215-servo-controller"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
